--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,10 @@
 
 # Next.js project files
 .next
-**/node_modules
+**/node_modules/*
+**/hardhat/artifacts/*
+**/hardhat/cache/*
+**/hardhat/coverage/*
+**/hardhat/fork/*
+**/hardhat/typechain/*
+**/hardhat/typechain-types/*
