--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@noble/ciphers": "^1.0.0",
     "@rainbow-me/rainbowkit": "2.1.6",
     "@tanstack/react-query": "^5.59.15",
     "@uniswap/sdk-core": "^5.8.2",
@@ -22,6 +23,7 @@
     "blo": "^1.2.0",
     "burner-connector": "^0.0.8",
     "daisyui": "4.12.10",
+    "file-saver": "^2.0.5",
     "next": "^14.2.11",
     "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.3.0",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^18.19.50",
     "@types/react": "^18.3.5",
     "abitype": "1.0.6",
