--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@heroicons/react": "^2.1.5",
     "@noble/ciphers": "^1.0.0",
     "@noble/curves": "^1.6.0",
-    "@noble/hashes": "^1.5.0"
+    "@noble/hashes": "^1.5.0",
+    "viem": "^2.21.42",
+    "wagmi": "^2.12.27"
   }
 }
